// Mindex remastered schema — PostgreSQL 17
// SQL counterpart: sql/init/*.sql (2026-08-22, D-33)
// Flow: PDF/OCR/AI extraction (staging schema) -> validate_rights_batch()
//       -> user confirmation -> save_rights_batch() -> all-or-nothing

Project mindex {
  database_type: 'PostgreSQL'
  Note: '''
  contract는 계약 업무 건, contract_history는 PDF 한 건과 판정 결과다.
  candidate/evaluation 계층 없이 계약서 권리 배치를 원자적으로 등록한다.
  판정축은 legal_right × exploitation_mode 두 계층을 유지한다(D-27).
  evidence JSONB는 각 필드의 페이지·조항·원문 인용을 보존한다.
  draft 계약의 active grant도 충돌 슬롯을 점유한다. 확정 권리 조회는
  confirmed_rights_grant view(contract.status signed)를 사용한다.
  team은 PIN 관리용 독립 개념이며 tenant가 아니다.
  '''
}

Enum result_kind {
  NORMAL
  CONFLICT
  REVIEW_REQUIRED
  WARNING
}

Enum exclusivity_kind {
  exclusive
  sole
  non_exclusive
}

Enum contract_status {
  draft
  signed
  cancelled
}

Enum contract_history_status {
  applied
  conflicted
}

Enum contract_document_kind {
  draft
  final
}

Enum rights_grant_status {
  active
  terminated
}

Enum terminated_reason_kind {
  superseded
  expired
  waiver
  cancelled
}

Enum asset_scope_kind {
  SERIES_ALL
  SEASON
  EPISODE
  EDITION
}

Table country {
  code CHAR(2) [pk]
  in_scope BOOLEAN [not null, default: false]
}
Table country_label {
  country_code CHAR(2) [pk]
  lang CHAR(2) [pk]
  label TEXT [not null]
}
Table territory_group {
  code TEXT [pk]
  note TEXT
}
Table territory_group_label {
  group_code TEXT [pk]
  lang CHAR(2) [pk]
  label TEXT [not null]
}
Table territory_group_member {
  group_code TEXT [pk]
  country_code CHAR(2) [pk]
}
Table legal_right {
  code TEXT [pk]
  parent_code TEXT
  name_ko TEXT [not null]
  lft INT [not null]
  rgt INT [not null]
  span INT4RANGE [note: 'GENERATED ALWAYS AS int4range(lft, rgt+1) STORED']
  note TEXT
}
Table exploitation_mode {
  code TEXT [pk]
  parent_code TEXT
  name_ko TEXT [not null]
  lft INT [not null]
  rgt INT [not null]
  span INT4RANGE [note: 'GENERATED ALWAYS AS int4range(lft, rgt+1) STORED']
  note TEXT
}
Table reason_code {
  code TEXT [pk]
  category TEXT [not null]
  result_type result_kind [not null]
  rule_code TEXT
  severity SMALLINT [not null, default: 50]
  is_decision_reason BOOLEAN [not null]
  name_ko TEXT [not null]
  template_ko TEXT [not null]
  template_en TEXT [not null]
  implemented BOOLEAN [not null, default: false]
  active BOOLEAN [not null, default: true]
}
Table constraint_reason_map {
  constraint_name TEXT [pk]
  reason_code TEXT [not null]
}
Table ip {
  id BIGSERIAL [pk]
  title TEXT [not null]
  kind TEXT
  activity TEXT [not null, default: 'active', note: 'ENUM: active/deactive. 프런트 필터 전용, 판정 로직 무관']
  created_at TIMESTAMPTZ [not null, default: `now()`]
}
Table ip_alias {
  id BIGSERIAL [pk]
  ip_id BIGINT [not null]
  alias_text TEXT [not null]
  lang CHAR(2)
  alias_type TEXT [not null, default: 'title']
  created_at TIMESTAMPTZ [not null, default: `now()`]
  Indexes { (ip_id, alias_text, lang) [unique] }
}
Table content_asset {
  id BIGSERIAL [pk]
  ip_id BIGINT [not null]
  parent_id BIGINT
  asset_type TEXT [not null, default: 'MAIN']
  scope_type asset_scope_kind [not null, default: 'SERIES_ALL']
  season_no INT
  episode_no INT
  edition_code TEXT
  title TEXT
  created_at TIMESTAMPTZ [not null, default: `now()`]
}
Table team {
  id BIGSERIAL [pk]
  name TEXT [not null]
  pin_hash TEXT [not null]
  created_at TIMESTAMPTZ [not null, default: `now()`]
  Note: 'PIN 관리용 독립 테이블. tenant/RLS 경계가 아니며 team_id를 다른 테이블에 전파하지 않는다.'
}
Table contract {
  id BIGSERIAL [pk]
  title TEXT [note: '계약 목록 화면 표시용 라벨. ip.title과 별개']
  grantor TEXT [not null, note: '권리를 주는 쪽(갑)']
  grantee TEXT [not null, note: '권리를 받는 쪽(을)']
  signed_date DATE
  lang CHAR(2)
  amount NUMERIC
  currency CHAR(4)
  status contract_status [not null, default: 'draft']
  current_history_id BIGINT
  source_tmpid UUID [unique, note: 'staging.extract_job.tmpid 참조 (D-33)']
  created_at TIMESTAMPTZ [not null, default: `now()`]
  updated_at TIMESTAMPTZ [not null, default: `now()`]
}
Table contract_history {
  id BIGSERIAL [pk]
  contract_id BIGINT [not null]
  version INT [not null]
  document_kind contract_document_kind [not null, default: 'draft']
  status contract_history_status [not null]
  file_name TEXT [not null]
  file_path TEXT [not null]
  file_hash TEXT [not null]
  mime_type TEXT [not null, default: 'application/pdf']
  raw_text TEXT
  conflict_report JSONB
  uploaded_at TIMESTAMPTZ [not null, default: `now()`]
  Indexes { (contract_id, version) [unique] }
  Note: 'version은 업로드 순번, document_kind는 초안/최종본, status는 DB 적용 결과다.'
}
Table rights_grant {
  id BIGSERIAL [pk]
  contract_id BIGINT [not null]
  contract_history_id BIGINT [not null]
  content_asset_id BIGINT [not null]
  lineage_id BIGINT [not null, note: 'FK가 아닌 논리 계보 값']
  status rights_grant_status [not null, default: 'active']
  territory CHAR(2) [not null]
  legal_right TEXT [not null]
  exploitation_mode TEXT [not null]
  legal_right_span INT4RANGE [not null]
  exploitation_mode_span INT4RANGE [not null]
  period DATERANGE [not null]
  exclusivity exclusivity_kind [not null]
  evidence JSONB [not null]
  conditions_raw JSONB
  terminated_at TIMESTAMPTZ
  terminated_reason terminated_reason_kind
  termination_note TEXT
  created_at TIMESTAMPTZ [not null, default: `now()`]
  Note: 'active는 계약 확정 여부가 아니라 충돌 슬롯 점유 상태다. draft 계약의 active grant도 다른 contract를 차단한다.'
}
Table contract_chunk {
  id BIGSERIAL [pk]
  contract_id BIGINT [not null]
  contract_history_id BIGINT [not null]
  clause_no TEXT
  chunk_text TEXT [not null]
  lang CHAR(2)
  page_start INT
  page_end INT
  embedding VECTOR(1024)
  created_at TIMESTAMPTZ [not null, default: `now()`]
}
Table change_log {
  id BIGSERIAL [pk]
  table_name TEXT [not null]
  row_id BIGINT [not null]
  op CHAR(1) [not null]
  processed_at TIMESTAMPTZ
  attempts INT [not null, default: 0]
  last_error TEXT
  created_at TIMESTAMPTZ [not null, default: `now()`]
}
Table schema_meta {
  version TEXT [pk]
  description TEXT
  applied_at TIMESTAMPTZ [not null, default: `now()`]
}

// staging 스키마 — 같은 mindex DB 안, 비동기 추출 큐 + 임시 결과 (D-33)
// 정본: sql/init/06_staging_schema.sql. 사람이 읽기 쉬운 설명은
// docs/mindex_staging DB 설명서.md.
Table staging.pdf_blob {
  tmpid      UUID [pk, default: `gen_random_uuid()`]
  data       BYTEA [not null, note: '암호화된 PDF 바이트 원본']
  filename   TEXT
  byte_size  INT
  created_at TIMESTAMPTZ [not null, default: `now()`]
}
Table staging.extract_job {
  tmpid       UUID [pk, ref: - staging.pdf_blob.tmpid, note: 'ON DELETE CASCADE']
  status      TEXT [not null, default: 'QUEUED', note: 'QUEUED | RUNNING | DONE | FAILED']
  stage       TEXT [note: 'OCR | LLM']
  lease_until TIMESTAMPTZ
  attempts    INT [not null, default: 0]
  reason      TEXT
  consumed_at TIMESTAMPTZ
  created_at  TIMESTAMPTZ [not null, default: `now()`]

  Indexes {
    (status, created_at)
  }
}
Table staging.extract_result {
  tmpid      UUID [pk, ref: - staging.extract_job.tmpid, note: 'ON DELETE CASCADE']
  payload    JSONB [not null]
  created_at TIMESTAMPTZ [not null, default: `now()`]
}

Ref: country_label.country_code > country.code
Ref: territory_group_label.group_code > territory_group.code
Ref: territory_group_member.group_code > territory_group.code
Ref: territory_group_member.country_code > country.code
Ref: legal_right.parent_code > legal_right.code
Ref: exploitation_mode.parent_code > exploitation_mode.code
Ref: constraint_reason_map.reason_code > reason_code.code
Ref: ip_alias.ip_id > ip.id
Ref: content_asset.ip_id > ip.id
Ref: content_asset.parent_id > content_asset.id
Ref: contract.current_history_id > contract_history.id
Ref: contract.source_tmpid > staging.extract_job.tmpid [delete: set null]
Ref: contract_history.contract_id > contract.id
Ref: rights_grant.contract_id > contract.id
Ref: rights_grant.contract_history_id > contract_history.id
Ref: rights_grant.content_asset_id > content_asset.id
Ref: rights_grant.territory > country.code
Ref: rights_grant.legal_right > legal_right.code
Ref: rights_grant.exploitation_mode > exploitation_mode.code
Ref: contract_chunk.contract_id > contract.id
Ref: contract_chunk.contract_history_id > contract_history.id
